fixed the functionality of the game. gifs all working, reset working and timer :) . still need to style this and may change background all together. need to add media queries still to see the whole image on smaller screens.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,6 +9,3 @@ body {
     background-color: rgb(126, 115, 115, .65);
 }
 
-#image-view {
-    background-color: rgb(126, 115, 115, .65);
-}
